<resources>
    <!-- General App Strings -->
    <string name="app_name">JobSearchApp</string>
    <string name="app_icon">App Icon</string>
    <string name="app_title">JobSearchApp</string>


    <!-- Login Screen Strings -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_up_text">Don\'t have an account? <b>Sign Up</b></string>
    <string name="sign_up_text_only">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <!-- Password Reset Screen -->
    <string name="reset_password_text">Reset Password</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="password_reset_failed">Failed to send reset email</string>

    <!-- Registration Screen -->
    <string name="register_text">Register</string>

    <!-- Profile Screen -->
    <string name="edit_profile_button">Edit Profile</string>
    <string name="save_changes_text">Save Changes</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="profile_updated">Profile updated</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="profile_title">Profile</string>

    <!-- MainActivity -->
    <string name="search_hint">Search for jobs, companies, etc.</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="job_listings_description">Job listings</string>
    <string name="company_name">Company Name</string>

    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>

    <!-- Edit Profile -->
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>
    <string name="description_hint">Description</string>
        <string name="profile_data_not_found">Profile data not found</string>
        <string name="reset_password_not_available">Password reset not available</string>
        <string name="all_fields_required">All fields must be filled</string>
    </resources>




