<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_below="@id/emailEditText"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="8dp"
        android:clickable="true" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_marginTop="16dp"
        android:clickable="true" />
</RelativeLayout>


