<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/full_name_hint"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/age_hint"
        android:inputType="number"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/genderEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageEditText"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/gender_hint"
        android:minHeight="48dp"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderEditText"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/description_hint"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/save_changes_text" />
</RelativeLayout>






