<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:padding="16dp">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_app_logo"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_centerHorizontal="true"
        android:text="Job Search"
        android:textSize="20sp"
        android:textColor="#333333"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_marginTop="32dp"
        android:hint="@string/email_hint"
        android:textColorHint="#AAAAAA"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/rounded_edittext_background" />

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_text"
        android:backgroundTint="#6200EE"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button_background" />
</RelativeLayout>



